2011-01-12  Murray Cumming  <murrayc@murrayc.com>

	Fix the make check build.

	* demos/gtk-demo/example_change_display.cc: Comment out the code that 
	we cannot yet port because the C example has not been ported.
	See https://bugzilla.gnome.org/show_bug.cgi?id=638907
	This at least fixes distcheck so I can make a tarball release.
	* demos/gtk-demo/example_stockbrowser.cc: Revert my previous clear()->reset() 
	change because this was actually meant to call Image::clear().

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Use RefPtr::reset() instead of deprecated RefPtr::clear().

	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_images.cc:
	* demos/gtk-demo/example_stockbrowser.cc: These were causing build errors 
	now that we build with deprecated glibmm API disabled.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Deprecate some API which wraps deprecated GTK+ API.

	* gtk/src/range.hg: Deprecate get/set_update_policy() with no replacement.
	* gtk/src/treeview.hg: append*(): Use only non-deprecated API in the 
	template implementation.
	* gtk/src/treeviewcolumn.hg: Documentation: Do not suggest use of deprecated 
  API.
	* gtk/src/window.hg: Deprecate get/set_has_frame() and 
  get/set_frame_dimensions() with no replacements.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Regenerated the XML files containing the C API documentation.

	* gdk/src/gdk_docs.xml:
	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Added to *-extra_objects.defs to improve the generated documentation.

	* gdk/src/gdk_extra_objects.defs:
	* gtk/src/gtk_extra_objects.defs: Add the definitions that were added in 
	git master.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Restore support for the extra _CLASS_GOBJECT() parameter.

	* tools/m4/class_gtkobject.m4: This is still needed for the weird GtkWindow
	declaration in gtk+-2.0, though that is fixed in gtk+-3.0.
