@@ -247,7 +247,7 @@ void Example_TreeView_EditableCells::add_columns()
     Gtk::TreeView::Column* pViewColumn = Gtk::manage(new Gtk::TreeView::Column("Number", m_columns.number));
   
     //connect signal handlers for auto-storing of edited cell data
-    Gtk::CellRenderer* pCellRenderer = pViewColumn->get_first_cell_renderer();
+    Gtk::CellRenderer* pCellRenderer = pViewColumn->get_first_cell();
     Gtk::CellRendererText* pCellRenderText = dynamic_cast<Gtk::CellRendererText*>(pCellRenderer);
     if(pCellRenderText)
     {
@@ -265,7 +265,7 @@ void Example_TreeView_EditableCells::add_columns()
     Gtk::TreeView::Column* pViewColumn = Gtk::manage(new Gtk::TreeView::Column("Product", m_columns.product));
   
     //connect signal handlers for auto-storing of edited cell data
-    Gtk::CellRenderer* pCellRenderer = pViewColumn->get_first_cell_renderer();
+    Gtk::CellRenderer* pCellRenderer = pViewColumn->get_first_cell();
     Gtk::CellRendererText* pCellRenderText = dynamic_cast<Gtk::CellRendererText*>(pCellRenderer);
     if(pCellRenderText)
     {
