@@ -1,3 +1,11 @@
+2011-01-14  Murray Cumming  <murrayc@murrayc.com>
+
+	Fix the make check build.
+
+	* demos/gtk-demo/example_treeview_editable_cells.cc:
+	* demos/gtk-demo/example_treeview_treestore.cc: Use get_first_cell() instead 
+	of deprecated get_first_cell_renderer().
+
 2011-01-12  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix the make check build.
